1 March 2011: Wouter
	- Fix no ADflag for NXDOMAIN in NSEC3 optout. And wildcard in optout.

24 February 2011: Wouter
	- bug #361: Fix, time.elapsed variable not reset with stats_noreset.

23 February 2011: Wouter
	- iana portlist updated.
	- common.sh to version 3.

18 February 2011: Wouter
	- common.sh in testdata updated to version 2.

15 February 2011: Wouter
	- Added explicit note on unbound-anchor usage:
	  Please note usage of unbound-anchor root anchor is at your own risk
	  and under the terms of our LICENSE (see that file in the source).

11 February 2011: Wouter
	- iana portlist updated.
	- tpkg updated with common.sh for common functionality.

7 February 2011: Wouter
	- Added regression test for addition of a .net DS to the root, and
	  cache effects with different TTL for glue and DNSKEY.
	- iana portlist updated.

28 January 2011: Wouter
	- Fix remove private address does not throw away entire response.

24 January 2011: Wouter
	- release 1.4.8

19 January 2011: Wouter
	- fix bug#349: no -L/usr for ldns.

18 January 2011: Wouter
	- ldns 1.6.8 tarball included.
	- release 1.4.8rc1.

17 January 2011: Wouter
	- add get and set option for harden-below-nxdomain feature.
	- iana portlist updated.

14 January 2011: Wouter
	- Fix so a changed NS RRset does not get moved name stuck on old
	  server, for type NS the TTL is not increased.

13 January 2011: Wouter
	- Fix prefetch so it does not get stuck on old server for moved names.

12 January 2011: Wouter
	- iana portlist updated.

11 January 2011: Wouter
	- Fix insecure CNAME sequence marked as secure, reported by Bert
	  Hubert.

10 January 2011: Wouter
	- faster lruhash get_mem routine.

4 January 2011: Wouter
	- bug#346: remove ITAR scripts from contrib, the service is discontinued, use the root.
	- iana portlist updated.

23 December 2010: Wouter
	- Fix in infra cache that could cause rto larger than TOP_TIMEOUT kept.

21 December 2010: Wouter